# src/routes/categories.routes.ts
@@ -2,7 +2,7 @@ import Router from "express";
 import multer from "multer";
 
 import { CreateCategoryController } from "../modules/car/use-cases/create-category/CreateCategoryController";
-import { importCategoriesControler } from "../modules/car/use-cases/import-categories";
+import { ImportCategoriesControler } from "../modules/car/use-cases/import-categories/ImportCategoriesController";
 import { ListCategoriesController } from "../modules/car/use-cases/list-categories/ListCategoriesController";
 export const categoriesRoutes = Router();
 
@@ -18,6 +18,5 @@ categoriesRoutes.get("/", listCategoriesController.handle);
 const createCategoryController = new CreateCategoryController();
 categoriesRoutes.post("/", createCategoryController.handle);
 
-categoriesRoutes.post("/import",upload.single("file"), (request, response) => {
-    importCategoriesControler.handle(request, response);
-})
+const importCategoriesController = new ImportCategoriesControler();
+categoriesRoutes.post("/import", importCategoriesController.handle)
